@@ -3,6 +3,8 @@ examples/ex1.pl
 examples/ex2.pl
 examples/ex3.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -20,15 +22,15 @@ Part/Action.pm
 Part/Transfer.pm
 README
 SIGNATURE
-t/Lego-Part-Action/00-use.t
-t/Lego-Part-Action/01-version.t
-t/Lego-Part-Action/02-pod_coverage.t
-t/Lego-Part-Action/03-pod.t
-t/Lego-Part-Transfer/00-use.t
-t/Lego-Part-Transfer/01-version.t
-t/Lego-Part-Transfer/02-pod_coverage.t
-t/Lego-Part-Transfer/03-pod.t
-t/Lego-Part/00-use.t
-t/Lego-Part/01-version.t
-t/Lego-Part/02-pod_coverage.t
-t/Lego-Part/03-pod.t
+t/Lego-Part-Action/01-use.t
+t/Lego-Part-Action/02-version.t
+t/Lego-Part-Transfer/01-use.t
+t/Lego-Part-Transfer/02-version.t
+t/Lego-Part/01-use.t
+t/Lego-Part/02-version.t
+xt/Lego-Part-Action/01-pod_coverage.t
+xt/Lego-Part-Action/02-pod.t
+xt/Lego-Part-Transfer/01-pod_coverage.t
+xt/Lego-Part-Transfer/02-pod.t
+xt/Lego-Part/01-pod_coverage.t
+xt/Lego-Part/02-pod.t
