@@ -1,4 +1,5 @@
 0.03
+ - Move author tests to xt/ directory.
 
 0.02 2015-08-24T11:31:45+02:00
  - Add SEE ALSO section in doc.
